RESOLVED FIXED 255171
SourceBufferPrivateAVFObjC, Stop using WeakPtrFactory
https://bugs.webkit.org/show_bug.cgi?id=255171
Summary SourceBufferPrivateAVFObjC, Stop using WeakPtrFactory
Jean-Yves Avenard [:jya]
Reported 2023-04-07 14:53:11 PDT
This is no longer needed as SourceBufferPrivate inherit from CanMakeWeakPtr
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-07 14:53:53 PDT
Jean-Yves Avenard [:jya]
Comment 2 2023-04-07 15:02:18 PDT
EWS
Comment 3 2023-04-07 23:54:40 PDT
Committed 262750@main (03e0165f167e): <https://commits.webkit.org/262750@main> Reviewed commits have been landed. Closing PR #12531 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.