SourceBufferPrivateAVFObjC, Stop using WeakPtrFactory https://bugs.webkit.org/show_bug.cgi?id=255171 rdar://107769670

Reviewed by Chris Dumez.

This is no longer needed.

* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::appendInternal):

Canonical link: https://commits.webkit.org/262750@main